testing/tests/ui/iso646.stderr
error: the previous template error derives from
 --> tests/ui/iso646.rs:4:25
  |
4 | #[template(ext = "txt", source = "{{ a & b }}")]
  |                         ^^^^^^

error: the previous template error derives from
  --> tests/ui/iso646.rs:18:25
   |
18 | #[template(ext = "txt", source = "{{ a | b }}")]
   |                         ^^^^^^

error: the previous template error derives from
  --> tests/ui/iso646.rs:32:25
   |
32 | #[template(ext = "txt", source = "{{ a ^ b }}")]
   |                         ^^^^^^
